# ts-cli

./: .gitignore  BRIEF.md  BUILD-REPORT.md  LAUNCH-PLAN.md  LICENSE  README.md  TEST-REPORT.md  pyproject.toml  test_ts.py  ts.py
docs/: index.html
landing/: index.html
launch/: landing.md  pricing.md  store-listing.md
