[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-cli"
version = "0.1.0"
description = "Instant timestamp converter — zero-dependency CLI for epoch ↔ human-readable conversion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Eric Joye", email = "eric@joye.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.scripts]
ts = "ts:main"

[tool.setuptools]
py-modules = ["ts"]
